# CPU_Monitor

./: CMakeCache.txt  CMakeLists.txt  CPU_Monitor.cbp  Makefile  a.out  cmake_install.cmake  logs.txt  null.d
headers/: analyzer.h  global.h  logger.h  printer.h  queue.h  reader.h  watchdog.h
src/: a.out  analyzer.c  logger.c  main  main.c  printer.c  queue.c  reader.c  watchdog.c
test/: a.out  test  test.c
